eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gault-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "api.gault-finance.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gault-api-service
            port:
              number: 80
